@startuml

' STATIC
' Generated by CTP - https://github.com/samuelroland/ctp

' Style
hide empty members
skinparam classAttributeIconSize 0

' Additions
remove PartitionedTaskStackRunner
remove DirectTaskRunner
remove IntVecSortTask
remove LockFreeStack
remove TSPTask
remove atomic_stamped
remove atomic_stamped::__ref
remove atomic_stamped::__ref::anon_struct_1
remove LockFreeStack::Node
remove TaskStack
remove FixedTaskStack
remove LogLevel
remove LogLine
remove TSPGraph::Point

' okay ?
remove TSPPath

CircularWSDeque -r-  CircularArray

remove free_functions

' REMOVE

' ENDSTATIC






' Objects

class CircularArray <template<typename T>> {
	- log_size: int
	- stored_size: long
	- segment: std::atomic<T*>*
	+ CircularArray(log_size: int)
	+ ~CircularArray()
	+ size(): long
	+ get(i: long): T*
	+ put(i: long, new_object: T*): void
	+ grow(bottom_index: long, top_index: long): CircularArray<T>*
}

class CircularWSDeque <template<typename T>> {
	- bottom: std::atomic<long>
	- top: std::atomic<long>
	- activeArray: std::atomic<CircularArray<T>*>
	+ {static} Empty: T*
	+ {static} Abort: T*
	+ {static} LogInitialSize: int
	+ pushBottom(new_object: T*): void
	+ popBottom(): T*
	+ steal(): T*
}

class DirectTaskRunner {
	+ run(t: Task*): void
}

class FixedTaskStack {
	- _tab: Task**
	- _size: int
	- _capacity: int
	+ FixedTaskStack(tab: Task**, cap: int)
	+ size_const(): int
	+ operator[](i: int): Task*
	+ push(t: Task*): void
	+ pop(): Task*
	+ clear(): void
}

class IntVecSortTask {
	- _data: std::vector<int>
	- {static} _free_list: std::vector<IntVecSortTask*>
	- reusealloc(): IntVecSortTask*
	- reusefree(p: IntVecSortTask*): void
	+ IntVecSortTask()
	+ ~IntVecSortTask()
	+ randomize(size: int): void
	+ result(): std::vector<int>&
	+ split(coll: TaskCollection*): int
	+ merge(coll: TaskCollection*): void
	+ solve(): void
	+ write_const(os: std::ostream&): void
}

class LockFreeQueue <template<typename T>> {
	- head: std::atomic<Node*>
	- tail: std::atomic<Node*>
	- retired_head: std::atomic<Node*>
	+ LockFreeQueue()
	+ ~LockFreeQueue()
	+ enqueue(t: T*): void
	+ dequeue(result: T*&): bool
}

class LockFreeStack <template<typename T>> {
	- _head: atomic_stamped<Node>
	+ LockFreeStack()
	+ push(item: T*): void
	+ pop(): T*
	+ empty(): bool
}

class ParallelTaskRunner {
	- _size: std::atomic<int>
	- _splits: std::atomic<int>
	- _empties: std::atomic<int>
	- _aborts: std::atomic<int>
	- _solves: std::atomic<int>
	- _cutoff: const int
	- _nbThreads: const int
	- workers: std::vector<std::thread>
	- _wsds: std::vector<std::unique_ptr<CircularWSDeque<Task>>>
	- _tasks_done: std::atomic<uint64_t>
	- _total_todo_tasks_counter: uint64_t
	- recurse(t: Task*, tid: unsigned): void
	- ParallelTaskRunner()
	- worker(tid: unsigned): void
	+ ParallelTaskRunner(size: int, nbThreads: unsigned int, cutoff: int)
	+ run(rootTask: Task*): void
	+ solves(): int
	+ splits(): int
	+ empties(): int
	+ aborts(): int
	+ enqueue(t: Task*, tid: unsigned): void
}

class ParallelTaskRunner {
	- _num_threads: int
	- _worklist: LockFreeStack<Task>
	- _active_tasks: std::atomic<int>
	- _threads: std::vector<std::thread>
	- worker_loop(): void
	+ ParallelTaskRunner(num_threads: int)
	+ ~ParallelTaskRunner()
	+ run(root: Task*): void
}

class PartitionedTaskStackRunner {
	- _size: int
	- _splits: int
	- _solves: int
	- recurse(t: Task*): void
	- PartitionedTaskStackRunner()
	+ PartitionedTaskStackRunner(size: int)
	+ run(t: Task*): void
	+ solves(): int
	+ splits(): int
}

class PriorityStack {
	- _tab: std::vector<TSPParraTask*>
	+ PriorityStack(cap: int)
	+ size_const(): int
	+ operator[](i: int): Task*
	+ push(t: Task*): void
	+ pop(): Task*
	+ clear(): void
}

class TSPGraph {
	- _coords: std::vector<Point>
	- _dist: std::vector<std::vector<int>>
	- _width: int
	- _filename: std::string
	- {static} euc2d(a: Point, b: Point): int
	+ size_const(): int
	+ distance_const(a: int, b: int): int
	+ resize(size: int): void
	+ TSPGraph(filename: const std::string&)
	+ write_const(os: std::ostream&): void
}

class TSPParraTask {
	- {static} _free_list: thread_local LockFreeQueue<Task>*
	- {static} _shortest_distance: std::atomic<int>
	- estimated_cost: double
	- _path: TSPPath
	- _cutoff_size: int
	+ {static} _shortest: TSPPath
	+ {static} _best_results: std::vector<TSPPath>
	+ {static} tid_copy: thread_local unsigned
	- reusealloc(node: int): TSPParraTask*
	- TSPParraTask(task: TSPParraTask*, node: int)
	- operator=(task: TSPParraTask&): TSPParraTask&
	- init(node: int): void
	+ {static} reusefree(p: TSPParraTask*): void
	+ TSPParraTask()
	+ ~TSPParraTask()
	+ get_estimated_cost_const(): double
	+ path(): TSPPath&
	+ cutoff(c: int): void
	+ result(): TSPPath&
	+ split(collection: TaskCollection*): int
	+ merge(collection: TaskCollection*): void
	+ solve(): void
	+ write_const(os: std::ostream&): void
}

class TSPPath {
	- {static} _graph: TSPGraph*
	- _node: int[]
	- _size: int
	- _distance: int
	- _contents: std::bitset<MAX_GRAPH>
	+ {static} FIRST_NODE: const int
	+ {static} MAX_GRAPH: const int
	+ {static} setup(graph: TSPGraph*): void
	+ {static} full(): int
	+ TSPPath()
	+ maximise(): void
	+ size(): int
	+ distance(): int
	+ contains(i: int): bool
	+ tail(): int
	+ push(node: int): void
	+ pop(): void
	+ write_const(os: std::ostream&): void
}

class TSPTask {
	- {static} _shortest: TSPPath
	- {static} _free_list: std::vector<TSPTask*>
	- _path: TSPPath
	- _cutoff_size: int
	- reusealloc(node: int): TSPTask*
	- reusefree(p: TSPTask*): void
	- TSPTask(task: TSPTask*, node: int)
	+ TSPTask()
	+ ~TSPTask()
	+ cutoff(c: int): void
	+ result(): TSPPath&
	+ split(collection: TaskCollection*): int
	+ merge(collection: TaskCollection*): void
	+ solve(): void
	+ write_const(os: std::ostream&): void
}

abstract class Task {
	+ {abstract} split(collection: TaskCollection*): int
	+ {abstract} merge(collection: TaskCollection*): void
	+ {abstract} solve(): void
	+ {abstract} write_const(os: std::ostream&): void
	+ ~Task()
}

abstract class TaskCollection {
	+ {abstract} size_const(): int
	+ {abstract} operator[](i: int): Task*
	+ {abstract} push(t: Task*): void
	+ {abstract} pop(): Task*
	+ {abstract} clear(): void
}

abstract class TaskRunner {
	- _start: std::chrono::time_point<std::chrono::high_resolution_clock>
	- _stop: std::chrono::time_point<std::chrono::high_resolution_clock>
	+ {abstract} run(t: Task*): void
	+ ~TaskRunner()
	+ duration_const(): double
	# startTimer(): void
	# stopTimer(): void
}

class TaskStack {
	- _tab: std::vector<Task*>
	+ TaskStack(cap: int)
	+ size_const(): int
	+ operator[](i: int): Task*
	+ push(t: Task*): void
	+ pop(): Task*
	+ clear(): void
}

class atomic_stamped <template<typename T>> {
	- ref: __ref
	+ atomic_stamped(ptr: T*, stamp: uint64_t)
	+ cas(curr: T*, next: T*, stamp: uint64_t, nstamp: uint64_t): bool
	+ get(stamp: uint64_t&): T*
	+ set(ptr: T*, stamp: uint64_t): void
}

enum LogLevel {
	NONE
	DEBUG
	INFO
	TRACE
}

class LockFreeQueue::Node {
	+ value: T*
	+ next: std::atomic<Node*>
	+ Node(t: T*)
}

class LockFreeStack::Node {
	+ data: T*
	+ next: Node
	+ Node(d: T*)
}

class LogLine {
	+ ss: std::ostringstream
	+ out: std::ostream&
	+ LogLine(o: std::ostream&)
	+ ~LogLine()
	+ operator<<(v: T&&): LogLine&
}

class TSPGraph::Point {
	+ x: double
	+ y: double
}

class atomic_stamped::__ref::anon_struct_1 {
	+ ptr: T*
	+ stamp: std::uint64_t
}

class atomic_stamped::__ref {
	+ pair: <anon-struct-1>
	+ val: uint64_t
}




' Inheritance relationships

Task <|-- IntVecSortTask

Task <|-- TSPParraTask

Task <|-- TSPTask

TaskCollection <|-- FixedTaskStack

TaskCollection <|-- PriorityStack

TaskCollection <|-- TaskStack

TaskRunner <|-- DirectTaskRunner

TaskRunner <|-- ParallelTaskRunner

TaskRunner <|-- ParallelTaskRunner

TaskRunner <|-- PartitionedTaskStackRunner







' Nested objects

LockFreeQueue +-r- LockFreeQueue::Node

LockFreeStack +-- LockFreeStack::Node

TSPGraph +-- TSPGraph::Point

atomic_stamped +-- atomic_stamped::__ref

atomic_stamped::__ref +-- atomic_stamped::__ref::anon_struct_1



' Free functions

note "Free functions \n\n\
make_subtree_nodes_count_table(): auto \n\
maximise(): s . \n\
maximise(): s . \n\
operator<<(os: std::ostream&, t: const TSPGraph&): std::ostream& \n\
operator<<(os: std::ostream&, t: const TSPPath&): std::ostream& \n\
operator<<(os: std::ostream&, t: const Task&): std::ostream& \n\
subtree_nodes_count(tree_height: int): long double\
" as free_functions


@enduml
